# vatest

./: .clang-format  info.c  jpegdec.c  meson.build  vautil.h
